[gd_scene load_steps=2 format=3 uid="uid://crgr47vmbbc85"]

[ext_resource type="Script" path="res://MainScreen.gd" id="1_dgme7"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dgme7")
BALL_NUMBER_RANGE_LIMIT = 90

[node name="CenterContainer2" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 400.0
grow_horizontal = 2

[node name="GridContainer" type="GridContainer" parent="CenterContainer2"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 5

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -108.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="StartGame" type="Button" parent="CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
text = "START"

[node name="ResetButton" type="Button" parent="CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
text = "RESET"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="CalledNumber" type="Button" parent="."]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_bottom = 100.0
grow_horizontal = 0

[node name="Label" type="Label" parent="CalledNumber"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Number"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="BingoResult" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Result: No Bingo"
